--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,9 @@ dependencies {
 
     implementation project(":tkutils")
 
+    implementation "cn.shper:tkui:0.2.6"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
 }
