--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,13 @@ buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
         google()
-        jcenter()
-        maven{ url 'https://dl.bintray.com/shper/maven' }
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath "com.android.tools.build:gradle:4.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath 'cn.shper.plugin:tk-maven:1.2.0'
+        classpath 'cn.shper.plugin:tk-maven:2.1.0'
     }
 
     configurations.all {
@@ -22,8 +21,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        maven{ url 'https://dl.bintray.com/shper/maven' }
+        mavenCentral()
     }
 
     configurations.all {
